--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "less",
     "mocha",
     "jest",
-    "babel"
+    "babel",
+    "bootstrap"
   ],
   "author": "Mike Erickson <codedungeon@gmail.com> (https://github.com/mikeerickson)",
   "license": "MIT",
