--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cd-react-boilerplate",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "cd-react-boilerplate",
   "main": "src/index.jsx",
-  "scripts":
+  "scripts": {
     "test": "gulp mocha && jest"
   },
   "jest": {
