--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cd-react-boilerplate",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "cd-react-boilerplate",
   "main": "src/index.jsx",
   "scripts": {
@@ -60,6 +60,7 @@
     "gulp-mocha": "2.2.0",
     "gulp-plumber": "1.1.0",
     "gulp-todo": "4.1.0",
+    "gulp-webpack": "1.5.0",
     "istanbul": "0.4.2",
     "jest": "0.1.40",
     "jest-cli": "0.9.2",
@@ -69,11 +70,13 @@
     "mocha": "2.4.5",
     "mocha-unfunk-reporter": "0.4.0",
     "moment": "2.12.0",
+    "node-notifier": "4.5.0",
     "react": "0.14.7",
     "react-addons-test-utils": "0.14.7",
     "react-dom": "0.14.7",
     "require-dir": "0.3.0",
     "sinon": "1.17.3",
-    "webpack": "1.12.14"
+    "webpack": "1.12.14",
+    "webpack-notifier": "1.3.0"
   }
 }
