--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bootstrap": "3.3.6",
     "cd-utils": "0.5.0",
     "chai": "3.5.0",
+    "clamp-js": "0.7.0",
     "eslint": "2.5.1",
     "eslint-loader": "1.3.0",
     "eslint-plugin-react": "4.2.3",
@@ -59,6 +60,7 @@
     "gulp-messenger": "0.13.1",
     "gulp-mocha": "2.2.0",
     "gulp-plumber": "1.1.0",
+    "gulp-size": "2.1.0",
     "gulp-todo": "4.1.0",
     "gulp-webpack": "1.5.0",
     "istanbul": "0.4.2",
