--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cd-react-boilerplate",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "cd-react-boilerplate",
   "main": "src/index.jsx",
   "scripts": {
@@ -37,38 +37,39 @@
   "author": "Mike Erickson <codedungeon@gmail.com> (https://github.com/mikeerickson)",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "6.6.5",
-    "babel-core": "6.7.4",
-    "babel-eslint": "6.0.0-beta.2",
-    "babel-jest": "9.0.3",
+    "babel-cli": "6.7.5",
+    "babel-core": "6.7.6",
+    "babel-eslint": "6.0.2",
+    "babel-jest": "11.0.1",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
     "bootstrap": "3.3.6",
-    "cd-utils": "0.5.0",
+    "cd-utils": "0.6.0",
     "chai": "3.5.0",
     "clamp-js": "0.7.0",
-    "eslint": "2.5.1",
+    "esl": "5.2.2",
+    "eslint": "2.8.0",
     "eslint-loader": "1.3.0",
-    "eslint-plugin-react": "4.2.3",
+    "eslint-plugin-react": "5.0.0",
     "fs.extra": "1.3.2",
     "gulp": "3.9.1",
     "gulp-copy": "0.0.2",
     "gulp-eslint": "2.0.0",
     "gulp-less": "3.0.5",
-    "gulp-messenger": "0.13.1",
+    "gulp-messenger": "0.15.2",
     "gulp-mocha": "2.2.0",
     "gulp-plumber": "1.1.0",
     "gulp-size": "2.1.0",
     "gulp-todo": "4.1.0",
     "gulp-webpack": "1.5.0",
-    "istanbul": "0.4.2",
+    "istanbul": "0.4.3",
     "jest": "0.1.40",
-    "jest-cli": "0.9.2",
+    "jest-cli": "11.0.1",
     "jsx-loader": "0.13.2",
     "lite-server": "2.1.0",
-    "lodash": "4.6.1",
+    "lodash": "4.11.1",
     "mocha": "2.4.5",
     "mocha-unfunk-reporter": "0.4.0",
     "moment": "2.12.0",
@@ -78,7 +79,7 @@
     "react-dom": "0.14.7",
     "require-dir": "0.3.0",
     "sinon": "1.17.3",
-    "webpack": "1.12.14",
+    "webpack": "1.13.0",
     "webpack-notifier": "1.3.0"
   }
 }
